--- a/src/hnurm_small_decision/CMakeLists.txt
+++ b/src/hnurm_small_decision/CMakeLists.txt
@@ -60,4 +60,9 @@ install(TARGETS decision_node
 install(DIRECTORY param/
     DESTINATION share/${PROJECT_NAME}/param
 )
+
+install(DIRECTORY launch/
+    DESTINATION share/${PROJECT_NAME}/launch
+)
+
 ament_package()
